Archive2/98/bde568d72c42b0/output
main.cpp: In function 'constexpr int f(int)':
main.cpp:5:1: error: body of constexpr function 'constexpr int f(int)' not a return-statement
 }
 ^
main.cpp:5:1: warning: no return statement in function returning non-void [-Wreturn-type]
