Archive2/98/bde568d72c42b0/main.cpp
#include <iostream>

constexpr int f(int x) {
    std::cout << x;
}

int main() {}